# nepse-portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_app.py  main.py  meroshare_crypto.py  pyproject.toml  render.yaml  scraper_db.py  supabase_client.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  meroshare-scrape.yml
DB/: main.sql
DB/migrations/: 002_scraper_upsert.sql  003_line_hash_natural_keys.sql  004_scrip_ltp.sql  005_scrape_jobs.sql  006_meroshare_asba_fields.sql
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html
graphify-out/2026-06-14/: cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
nepse_portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_purchase_normalize.py
web/: .env.production.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/auth/: AuthContext.tsx
web/src/components/: HoldingsTable.tsx  MeroshareCredentials.tsx  PasswordInput.tsx  PlaceholderMoney.tsx  ProtectedRoute.tsx  ScrapeProgressCard.tsx  SoldSections.tsx  StockDetail.tsx  SummaryCards.tsx
web/src/hooks/: useScrapeJobRealtime.ts
web/src/lib/: aggregatePortfolio.test.ts  aggregatePortfolio.ts  apiUrl.ts  applyPurchaseCosts.test.ts  applyPurchaseCosts.ts  classifyTransaction.test.ts  classifyTransaction.ts  mapDbToPortfolio.ts  matchTxPurchaseRate.test.ts  matchTxPurchaseRate.ts  pairMeroshareCsvs.test.ts  pairMeroshareCsvs.ts  (+7 more)
(+2 files in other folders)
